freepbx/rules.v4
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags ACK ACK -j ACCEPT
-A INPUT -m state --state ESTABLISHED -j ACCEPT
-A INPUT -m state --state RELATED -j ACCEPT
-A INPUT -p udp -m udp --dport 123 -j ACCEPT
# Trusted SIP Providers
# -A INPUT -p udp -m udp --dport 10000:20000 -j ACCEPT
# -A INPUT -p udp -m udp --dport 5060 -j ACCEPT
# -A INPUT -p tcp -m tcp --dport 5061 -j ACCEPT
# -A INPUT -p tcp -m tcp --dport 8089 -j ACCEPT
# End Trusted SIP Providers
# Added (ipt-add) Entries
# Trusted Public IP addresses
# Private (LAN) IP Addresses
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 127.0.0.0/8 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
COMMIT
